tests/snapshots/unexpected_eof__incomplete_check_close_stmt.snap
---
source: tests/unexpected_eof.rs
expression: stderr

---
error: expected keyword `check`, found end of file
      |
    4 |     please end
      |               ^

